# technical_test_orbidi

./: .gitignore  README.md  docker-compose.yml
envs/: postgres.env
init/postgres/: init.sql
map_my_world/: .bashrc  .env  Dockerfile  conftest.py  docker-entrypoint.sh  main.py  pyproject.toml
map_my_world/app/models/: __init__.py  category.py  location.py  review.py
map_my_world/app/routers/: __init__.py  category_api.py  location_api.py  suggestion_api.py
map_my_world/app/schemas/: category_schema.py  location_schema.py  review_schema.py  suggestion_schema.py
map_my_world/app/service/: suggested_combinations.py
map_my_world/app/tests/: test_category.py  test_location.py  test_suggestion.py
map_my_world/core/: config.py  database.py
map_my_world/core/models/: __init__.py  auditor.py  user.py
map_my_world/migrations/: env.py
map_my_world/migrations/versions/: dcd5b9eee930_init_tables.py
